# unimacro

./: .gitignore  README.md  pyproject.toml
documentation/: additionalgrammars.rst  conf.py  control.rst  defaultgrammars.rst  grammars.rst  project.rst
documentation/_build/doctrees/: config.doctree  documentation.doctree  environment.pickle  index.doctree  loader.doctree  modules.doctree  natlinkstatus.doctree  natlinkutils.doctree  project.doctree
documentation/_build/html/: .buildinfo  config.html  documentation.html  genindex.html  index.html  loader.html  modules.html  natlinkstatus.html  natlinkutils.html  objects.inv  project.html  search.html  searchindex.js
documentation/_build/html/_sources/: index.rst.txt
documentation/_build/html/_static/: documentation_options.js
src/unimacro/: __init__.py  _control.py  check_unimacro_grammars.py  load_built_in.py  load_built_it.py  logger.py  natlinkutilsbj.py
src/unimacro/UnimacroGrammars/: _clickbyvoice.py  _folders.py  _lines.py  foo.py
src/unimacro/sample_ini/enx_inifiles/: _clickbyvoice.ini  _folders.ini
src/unimacro/sample_ini/nld_inifiles/: _clickbyvoice.ini  _folders.ini
tests/: conftest.py  generateSuppliedGrammarList.ps1  supplied_grammars.txt  test_available_grammars.py
tests/test_sample_unimacro_userdir/enx_inifiles/: _folders.ini
