[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "unimacro"
authors = [{name = "Quintijn Hoogenboom (maintainer)", email = "q.hoogenboom@antenna.nl"}]
dynamic = ["version", "description"]
requires-python = ">=3.9"
readme = "README.md"


dependencies = ["dtactions >= 1.5.6",
        "debugpy >= 1.2.0",
		"pywin32 >= 304",
		"natlinkcore >= 5.3.5"]
		  
		
classifiers=[	"Development Status :: 4 - Beta",
				"Topic :: Multimedia :: Sound/Audio :: Speech",
				"Topic :: Scientific/Engineering :: Human Machine Interfaces",
				"Environment :: Win32 (MS Windows)",
				"Intended Audience :: Developers",
				"Operating System :: Microsoft :: Windows",
				"Programming Language :: Python :: 3.9",
				"Programming Language :: Python :: 3.10",
				"Programming Language :: Python :: 3.11",
				"Programming Language :: Python :: Implementation :: CPython",
				"Topic :: Multimedia :: Sound/Audio :: Speech",
				"Topic :: Software Development :: Libraries :: Python Modules",
        ]
				
[project.optional-dependencies]
test = [
    "pytest >=7.1.2",
]
dev = [
	"pyenvutils",
	"flit",
	"pytest >= 7.1.2"
]
[tool.pytest.ini_options]
minversion = "7.1.2"
addopts = "--capture=tee-sys "
# very important
#the pythonpath lets pytest load code in your source area
#in addition to that in site-packages etc.
#you may want to run your tests without install natlinkcore with flit or pip
pythonpath = [
    "src",
	"src/unimacro",
    "src/unimacro/unimacro_test",
]
testpaths= [
      "src/unimacro/unimacro_test",
]
python_files = [
			"unittest*.py",
			"test_*.py",
	]
 

[project.scripts]

# spaces in file names need to be removed.
#_number_extended= "UnimacroGrammars.number extended:thisGrammar"
#_number_simple= "UnimacroGrammars.number simple:thisGrammar"

[project.entry-points.UnimacroGrammar]
_control="_control:UtilGrammar"
_brackets  = "UnimacroGrammars._brackets:thisGrammar"
_calculator= "UnimacroGrammars._calculator:thisGrammar"
_clickbyvoice = "UnimacroGrammars._clickbyvoice:thisGrammar"
_debug_natlink = "UnimacroGrammars._debug_natlink:thisGrammar"
_folders = "UnimacroGrammars._folders:thisGrammar"
_general = "UnimacroGrammars._general:thisGrammar"
_keystrokes = "UnimacroGrammars._keystrokes:thisGrammar"
_latex = "UnimacroGrammars._latex:thisGrammar"
_lines = "UnimacroGrammars._lines:thisGrammar"
_oops = "UnimacroGrammars._oops:thisGrammar"
_repeat = "UnimacroGrammars._repeat:thisGrammar"
_tags = "UnimacroGrammars._tags:thisGrammar"
_tasks = "UnimacroGrammars._tasks:thisGrammar"
_testtrayicon = "UnimacroGrammars._testtrayicon:thisGrammar"
_unimacrotest = "UnimacroGrammars._unimacrotest:thisGrammar"
excel = "UnimacroGrammars.excel:thisGrammar"
foldersrememberdialog = "UnimacroGrammars.foldersrememberdialog:thisGrammar"
frescobaldi = "UnimacroGrammars.frescobaldi:thisGrammar"
solitaire = "UnimacroGrammars.solitaire:thisGrammar"
winword_variable = "UnimacroGrammars.winword_variable:thisGrammar"

[project.urls]
homepage = "https://qh.antenna.nl/unimacro/"
repository="https://github.com/dictation-toolbox/unimacro"
source="https://github.com/dictation-toolbox/unimacro"		